<resources>
    <string name="app_name">知乎日报</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings1">Settings</string>


    <string name="action_settings">设置</string>
    <string name="pay_fee">我的创作</string>
    <string name="car_manager">我的收藏</string>
    <string name="my_parking">我的关注</string>
    <string name="parking_record">邀请回答</string>
    <string name="favorite_parking">已购内容</string>
    <string name="feedback">我的书架</string>
    <string name="about_us">关于我们</string>
    <string name="app_version">%s 版本</string>


    <string name="hint_account_name">输入手机号</string>
    <string name="hint_verify_code">输入6位数验证码</string>
    <string name="hint_input_password">最多16个字符,区分大小写</string>
    <string name="hint_confirm_password">请再次确认输入密码</string>
    <string name="err_input_mobile_num">请输入正确的手机号</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="getting_verify_code">正在获取(%d秒)</string>
    <string name="confirm_commit">确认提交</string>
    <string name="err_passwords_not_match">两次密码不相同,请重试</string>
    <string name="err_password_length_not_match">请输入6-16位的密码</string>
    <string name="hint_account_text">手机号/邮箱</string>
    <string name="hint_password_text">密码</string>
    <string name="remember_user">自动登录</string>
    <string name="remember_password">记住密码</string>
    <string name="login">登录</string>
    <string name="register">快速注册</string>
    <string name="login_account">登录帐户</string>
    <string name="forget_password">忘记密码</string>


    <string name="tv_items_daily_fragment">今日热点</string>
    <string name="detail_tv_tilte">详细页面</string>

    <string name="toolbar_tool">注册界面</string>


    <string name="regite_title">注册账号，让你拥有无限可能</string>
    <string name="regite_phone">请输入手机号</string>
    <string name="regite_password">请输入密码</string>
    <string name="regite_button">注册</string>


    <string name="set_wifi">WLAN</string>
    <string name="set_bluetooth">蓝牙</string>
    <string name="set_net">网络设置</string>
    <string name="set_voice">声音</string>
    <string name="set_cunchu">存储</string>
    <string name="set_kaifa">开发人员选项</string>
    <string name="set_tongbu">账户同步</string>
    <string name="set_time">日期时间</string>
    <string name="set_set">设置</string>
</resources>
