<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.Asus.shixun.ui.activity.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text = "@string/toolbar_tool"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/qian_blue"
            android:textSize="22sp"
            android:layout_marginTop="12dp"
            android:text="@string/regite_title"/>

        <EditText
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/regite_phone"/>
        <EditText
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/regite_password"/>

        <Button
            android:layout_marginTop="32dp"
            android:layout_width="278dp"
            android:layout_height="64dp"
            android:background="@color/soft_blue"
            android:layout_gravity="center"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:text="@string/regite_button"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="bottom">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom = "true"
            android:src="@mipmap/weibo1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:src="@mipmap/weixin1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom = "true"
            android:layout_alignParentRight="true"
            android:src="@mipmap/qq1" />

    </RelativeLayout>


</LinearLayout>
